# python-voxel-engine

./: LICENSE  README.md  pyproject.toml
src/: camera.py  frustum.py  main.py  noise.py  player.py  scene.py  settings.py  shader_program.py  terrain_gen.py  textures.py  world.py
src/meshes/: base_mesh.py  chunk_mesh.py  chunk_mesh_builder.py  quad_mesh.py
src/shaders/: chunk.frag  chunk.vert  quad.frag  quad.vert  water.frag  water.vert
src/world_objects/: chunk.py
